add section slidder

--- a/prepros.config
+++ b/prepros.config
@@ -885,6 +885,13 @@
     },
     "files": [
       {
+        "file": "css/blocks/slider.scss",
+        "config": {
+          "compileImported": true,
+          "autoCompile": false
+        }
+      },
+      {
         "file": "css/main.css",
         "config": {
           "autoCompile": true,
